--- a/clint/src/components/cards/cards.scss
+++ b/clint/src/components/cards/cards.scss
@@ -27,10 +27,11 @@
 
   .header {
     width: 100%;
-    height: 70px;
+    height: 40px;
     display: flex;
     align-items: center;
     padding: 20px;
+    padding-top: 40px;
     justify-content: space-between;
     .number{
         font-size: 18px;
